--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ nav li{
 
 h2{
     font-weight: 600;
-    font-size: 2.025rem;
+    font-size: 1.6rem;
     padding-bottom: 2.5%;
 }
 
@@ -111,14 +111,14 @@ main{
 }
 
 h3{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     font-weight: 600;
     padding-top: 4%;
     padding-bottom: 2.5%;
 }
 
 h4{
-    font-size: 1.25rem;
+    font-size: 1.15rem;
     font-weight: 600;
     padding-top: 5%;
     padding-bottom: 5%;
@@ -250,10 +250,22 @@ header h1{
     padding-top: 2%;
     padding-bottom: 2%;
     width: 80%;
+    font-size: 2.2rem;
 }
 
 section h2 {
-    padding-top: 0%;
+    padding-top: 2%;
+    font-size: 1.7rem;
+}
+
+h3{
+    font-size: 1.5rem;
+    padding-top: 2%;
+}
+
+h4{
+    font-size: 1.2rem;
+    padding-top: 2%;
 }
 
 footer{
@@ -264,7 +276,7 @@ footer{
     width: 50%;
     margin-left: auto;
     margin-right: auto;
-} 
+}
 }
 
 
@@ -272,6 +284,24 @@ footer{
 @media screen and (min-width: 1050px){
     header{
         align-items: center;
+    }
+
+    h1{
+        font-size: 2.4rem;
+    }
+
+    h2{
+        font-size: 1.8rem;
+    }
+
+    h3{
+        font-size: 1.55rem;
+        padding-top: 2%;
+    }
+
+    h4{
+        font-size: 1.3rem;
+        padding-top: 2%;
     }
 
     h4{
